[gd_scene load_steps=3 format=2]

[ext_resource path="res://Minigames/pauseScreen.gd" type="Script" id=1]
[ext_resource path="res://title_screen/fonts/montserrat25.tres" type="DynamicFont" id=2]

[node name="pauseScreen" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="pauseBG" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
margin_right = 1024.0
margin_bottom = 600.0

[node name="Panel" type="Panel" parent="."]
margin_left = 362.0
margin_top = -600.0
margin_right = 662.0
margin_bottom = -225.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 59.0
margin_right = 240.0
margin_bottom = 375.0
custom_constants/separation = 40
alignment = 1

[node name="resumeButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 181.0
margin_bottom = 167.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="backToMapBtn" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 207.0
margin_right = 181.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 2 )
text = "Back to Map"
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/resumeButton" to="." method="_on_resumeButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/backToMapBtn" to="." method="_on_backToMapBtn_pressed"]
